# LibreNT

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  default.nix  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/: PULLREQUEST_TEMPLA.md
.github/workflows/: shell.yml
.poolside/: settings.local.yaml
adk/: LibreNTDeploymentEnviroment.json
adk/ossetup/: CMakeLists.txt  README.md  resources.rc
adk/ossetup/assets/icons/: README.txt
adk/ossetup/cmake/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
adk/ossetup/include/: DeploymentEngine.h  DriverInjector.h  ImGuiImpl.h  InstallerUI.h  RegistryPatcher.h  VerboseBoot.h
adk/ossetup/src/: DeploymentEngine.cpp  DriverInjector.cpp  ImGuiImpl.cpp  InstallerUI.cpp  RegistryPatcher.cpp  VerboseBoot.cpp  main.cpp
adk/tools/: mkpe
drivers/btrfs/: btrfs.cat
drivers/btrfs/aarch64/: btrfs.sys
drivers/btrfs/amd64/: btrfs.sys
drivers/btrfs/arm/: btrfs.sys
drivers/btrfs/x86/: btrfs.sys
librebuilder/: Cargo.toml
librebuilder/src/: main.rs
libredaemon/: Cargo.toml  Makefile  README.md  init.rc
libredaemon/.cargo/: config.toml
libredaemon/.poolside/: settings.local.yaml
libredaemon/src/: environment.rs  init.rs  logger.rs  main.rs  process.rs  registry.rs
mswindows/: Makefile  Makefile~  desktop.launcher.dk.c  dock.h  fallback.explorer.c
mswindows/.poolside/: settings.local.yaml
mswindows/shell/: App.xaml  App.xaml.cs  LibreNT.Shell.csproj  MainWindow.xaml  MainWindow.xaml.cs  Program.cs
mswindows/shell/.poolside/: settings.local.yaml
mswindows/shell/Components/StartMenu/: StartMenu.xaml  StartMenu.xaml.cs
mswindows/shell/Components/SystemTray/: SystemTray.xaml  SystemTray.xaml.cs
mswindows/shell/Components/Taskbar/: Taskbar.xaml  Taskbar.xaml.cs
mswindows/shell/Services/: WindowManager.cs
mswindows/welcome/: Program.cs  welcome.c
mswindows/winver/: osinfo.c  resource.h  winver.c  winver.rc  winver_p.h
ntos2nd/: CMakeLists.txt  MSWindows.System.h  MSWindows.c  NTCall.c  NTCall.h  NTMain.c  README.md  build-mingw.sh  build-winelf.sh  ntoskrnl.rc
ntos2nd/.poolside/: settings.local.yaml
ntos2nd/docs/: POSIX_SUBSYSTEM.md
ntos2nd/examples/: CMakeLists.txt  demo_program.c  test_program.c
ntos2nd/ntos2nd/: apibridge.c  apibridge.h  kernel.c  kernel.h  ntos2nd.c  sandbox.c  sandbox.h  syscall.c  syscall.h  undocumented.c  undocumented.h
ntos2nd/posix/: README.md
ntos2nd/posix/driver/: posixsubsys_driver.c
ntos2nd/posix/include/: posix_abi.h
ntos2nd/posix/runtime/: posixsubsystem.c  posixsubsystem.def
ntos2nd/tests/: CMakeLists.txt  kernel_test.c  simple_test.c
ntos2nd/winelf/: Cargo.toml  README.md
ntos2nd/winelf/.cargo/: config.toml
ntos2nd/winelf/driver/: README.md  winelf_abi.h  winelf_driver.c
ntos2nd/winelf/src/: driver.rs  error.rs  lib.rs  main.rs  memory.rs  syscall.rs
ntos2nd/winelf/src/elf/: mod.rs
ntos2nd/winelf/src/emulation/: mod.rs
ntos2nd/winelf/src/loader/: mod.rs
reg/: Main.reg  librent.system.version.reg  software.mswindows.explorer.off.reg  winelf.binfmt.add.reg
setup/: Cargo.toml
src/: lib.rs
system/: init.rc
system/image/: MakePEISO.ps1
system/logontheme/: LogonShell.ini  mktheme.sh
system/winpatch/: LibreNT.System.Fonts.reg  LibreNT.System.FontsDownload.ps1  WindowsNT.Programs.DeBloat.ps1  WindowsNT.System.CurrentVersion.reg
tools/: insert_file_banner.py
utils/: Enable-ConsoleLogon.ps1  verbose.bat
utils/installer/: installer.rc  resource.h
utils/installer/.poolside/: settings.local.yaml
utils/libreplatformbuilder/: Cargo.toml
utils/libreplatformbuilder/.poolside/: settings.local.yaml
utils/libreplatformbuilder/src/: lib.rs  main.rs
utils/libreplatformbuilder/src/builder/: mod.rs
utils/libreplatformbuilder/src/components/: mod.rs
utils/libreplatformbuilder/src/config/: mod.rs
utils/libreplatformbuilder/src/iso/: mod.rs
utils/libreplatformbuilder/src/programs/: mod.rs
utils/libreplatformbuilder/src/registry/: mod.rs
utils/libreplatformbuilder/src/ui/: common.rs  gui.rs  mod.rs  tui.rs
utils/libreplatformbuilder/src/wim/: boot_wim.rs  install_wim.rs  mod.rs
