# PROJECT:     LibreNT
# LICENSE:     BSD-3-Clause (https://spdx.org/licenses/BSD-3-Clause)
# PURPOSE:     Cargo workspace manifest
# COPYRIGHT:   Copyright 2026 Panoc95

[package]
name = "libredaemon"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.45", features = [
    "Win32_Foundation",
    "Win32_System_Environment", 
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies can be added here

[package.metadata.winres]
# Windows resource metadata for future use